olive/parsers/v1/OliveParser.py
# Generated from olive/parsers/v1/Olive.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class OliveParser ( Parser ):

    grammarFileName = "Olive.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'('", "')'", "'!'", "'>'", 
                     "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TEXT", "WORD", "WHITESPACE", "NEWLINE" ]

    RULE_tasklist = 0
    RULE_task = 1
    RULE_description = 2
    RULE_link = 3
    RULE_priority = 4
    RULE_size = 5
    RULE_tag = 6

    ruleNames =  [ "tasklist", "task", "description", "link", "priority", 
                   "size", "tag" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    TEXT=8
    WORD=9
    WHITESPACE=10
    NEWLINE=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TasklistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OliveParser.EOF, 0)

        def task(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OliveParser.TaskContext)
            else:
                return self.getTypedRuleContext(OliveParser.TaskContext,i)


        def getRuleIndex(self):
            return OliveParser.RULE_tasklist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTasklist" ):
                listener.enterTasklist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTasklist" ):
                listener.exitTasklist(self)




    def tasklist(self):

        localctx = OliveParser.TasklistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tasklist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.task()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << OliveParser.T__0) | (1 << OliveParser.WORD) | (1 << OliveParser.WHITESPACE))) != 0)):
                    break

            self.state = 19
            self.match(OliveParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TaskContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def description(self):
            return self.getTypedRuleContext(OliveParser.DescriptionContext,0)


        def NEWLINE(self):
            return self.getToken(OliveParser.NEWLINE, 0)

        def EOF(self):
            return self.getToken(OliveParser.EOF, 0)

        def getRuleIndex(self):
            return OliveParser.RULE_task

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask" ):
                listener.enterTask(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask" ):
                listener.exitTask(self)




    def task(self):

        localctx = OliveParser.TaskContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_task)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.description()
            self.state = 22
            _la = self._input.LA(1)
            if not(_la==OliveParser.EOF or _la==OliveParser.NEWLINE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def link(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OliveParser.LinkContext)
            else:
                return self.getTypedRuleContext(OliveParser.LinkContext,i)


        def priority(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OliveParser.PriorityContext)
            else:
                return self.getTypedRuleContext(OliveParser.PriorityContext,i)


        def size(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OliveParser.SizeContext)
            else:
                return self.getTypedRuleContext(OliveParser.SizeContext,i)


        def tag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OliveParser.TagContext)
            else:
                return self.getTypedRuleContext(OliveParser.TagContext,i)


        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(OliveParser.WORD)
            else:
                return self.getToken(OliveParser.WORD, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(OliveParser.WHITESPACE)
            else:
                return self.getToken(OliveParser.WHITESPACE, i)

        def getRuleIndex(self):
            return OliveParser.RULE_description

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription" ):
                listener.enterDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription" ):
                listener.exitDescription(self)




    def description(self):

        localctx = OliveParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_description)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 24
                    self.link()
                    pass

                elif la_ == 2:
                    self.state = 25
                    self.priority()
                    pass

                elif la_ == 3:
                    self.state = 26
                    self.size()
                    pass

                elif la_ == 4:
                    self.state = 27
                    self.tag()
                    pass

                elif la_ == 5:
                    self.state = 28
                    self.match(OliveParser.WORD)
                    pass

                elif la_ == 6:
                    self.state = 29
                    self.match(OliveParser.WHITESPACE)
                    pass


                self.state = 32 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << OliveParser.T__0) | (1 << OliveParser.WORD) | (1 << OliveParser.WHITESPACE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(OliveParser.TEXT)
            else:
                return self.getToken(OliveParser.TEXT, i)

        def getRuleIndex(self):
            return OliveParser.RULE_link

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLink" ):
                listener.enterLink(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLink" ):
                listener.exitLink(self)




    def link(self):

        localctx = OliveParser.LinkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_link)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(OliveParser.T__0)
            self.state = 35
            self.match(OliveParser.TEXT)
            self.state = 36
            self.match(OliveParser.T__1)
            self.state = 37
            self.match(OliveParser.T__2)
            self.state = 38
            self.match(OliveParser.TEXT)
            self.state = 39
            self.match(OliveParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PriorityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self):
            return self.getToken(OliveParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return OliveParser.RULE_priority

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPriority" ):
                listener.enterPriority(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPriority" ):
                listener.exitPriority(self)




    def priority(self):

        localctx = OliveParser.PriorityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_priority)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(OliveParser.WHITESPACE)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.match(OliveParser.T__4)
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==OliveParser.T__4):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self):
            return self.getToken(OliveParser.WHITESPACE, 0)

        def WORD(self):
            return self.getToken(OliveParser.WORD, 0)

        def getRuleIndex(self):
            return OliveParser.RULE_size

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSize" ):
                listener.enterSize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSize" ):
                listener.exitSize(self)




    def size(self):

        localctx = OliveParser.SizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_size)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(OliveParser.WHITESPACE)
            self.state = 48
            self.match(OliveParser.T__5)
            self.state = 49
            self.match(OliveParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self):
            return self.getToken(OliveParser.WHITESPACE, 0)

        def WORD(self):
            return self.getToken(OliveParser.WORD, 0)

        def getRuleIndex(self):
            return OliveParser.RULE_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTag" ):
                listener.enterTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTag" ):
                listener.exitTag(self)




    def tag(self):

        localctx = OliveParser.TagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(OliveParser.WHITESPACE)
            self.state = 52
            self.match(OliveParser.T__6)
            self.state = 53
            self.match(OliveParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





